* Added a Copy button for making reservations of devices that need to move to a new location
* Language mapping ability - includes Slovenian as the first translated language
* Added the vmState and Last Polled timestamp in the Assets by Owner report
* No forced uppercase, now a configuration parameter

Changes in 1.5
--------------
* Database charset changed from latin1 to utf8 to better support localization/internationalization
* Better error-checking
* Ability to disable users (don't delete them since they are foreign keys for auditing)
* Chassis/Blade tracking for front and rear slots
* Ability to enter SNMP temperature sensor information with each cabinet
* Barcode scanning for Serial # and Asset Tag in devices
-- Requires the ZXing app on mobile device
-- Does not work correctly with Chrome Browser on Android
-- Works perfectly with Dolphin Browser on Android
-- Need testers for other platforms

Changes in 1.4
--------------
* Style sheet colors are now configuration items
* Added a visual placement picker for devices when putting into a cabinet.  Displays available spaces rather than simply allowing an arbitrary number to be entered.
* Added database structure for a very rudimentary spare stock inventory
* Added in support for chassis devices in a parent/child relationship.  Renamed the the device type of 'Routing Chassis' to simply 'Chassis' in support of this.
* Additional bug fixes and security auditing of the code

Changes in 1.3
--------------
* Added an optional reservation color for the cabinet view to the configuration options
* Added the ability to color code the cabinet view by department (default is no colorization)
* Changed out button interface for a more tab friendly click interface
* Added Warranty Company and Warranty Expiration to devices
* Added Key/Lock Information field to Cabinets
* PDUs and Racks are now included in the search results
* Added report for Cabinet Audit frequency
* Added report for Cabinet Audit by data center